[gd_scene format=3 uid="uid://nfspvi4m1fs"]

[ext_resource type="Script" uid="uid://ct2l8qe5wb8yj" path="res://scripts/MockOS.gd" id="1"]
[ext_resource type="Script" uid="uid://8m584omr3ces" path="res://scripts/Desktop.gd" id="2"]
[ext_resource type="Script" uid="uid://djrocun6x4fbf" path="res://scripts/Taskbar.gd" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_desktop"]
bg_color = Color(0.08, 0.09, 0.13, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_taskbar"]
bg_color = Color(0.06, 0.07, 0.11, 1)
border_width_top = 1
border_color = Color(0.2, 0.2, 0.3, 1)

[node name="MockOS" type="Control" unique_id=207236412]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Desktop" type="Control" parent="." unique_id=856592041]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
script = ExtResource("2")

[node name="Background" type="Panel" parent="Desktop" unique_id=803191440]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_desktop")

[node name="WindowLayer" type="Control" parent="Desktop" unique_id=987668387]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Taskbar" type="PanelContainer" parent="." unique_id=1394096035]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_taskbar")
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="Taskbar" unique_id=949544131]
layout_mode = 2
size_flags_horizontal = 3

[node name="OSLabel" type="Label" parent="Taskbar/HBoxContainer" unique_id=1515260726]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 13
text = " üñ• PicoOS  "
vertical_alignment = 1

[node name="Separator1" type="VSeparator" parent="Taskbar/HBoxContainer" unique_id=991291360]
layout_mode = 2

[node name="NotepadButton" type="Button" parent="Taskbar/HBoxContainer" unique_id=47463352]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = " üìù Notepad "
flat = true

[node name="ScriptEditorButton" type="Button" parent="Taskbar/HBoxContainer" unique_id=1562596962]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = " ‚öô Script Editor "
flat = true

[node name="Spacer" type="Control" parent="Taskbar/HBoxContainer" unique_id=872283191]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClockLabel" type="Label" parent="Taskbar/HBoxContainer" unique_id=956392526]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "00:00:00"
horizontal_alignment = 2
vertical_alignment = 1
